Melfirewall/rules.v4
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:LIMITE - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -i enp0s3 -s 192.168.18.0/24 -p tcp --dport 5601 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -i enp0s8 -s 172.16.0.100/31 -p tcp --dport 8220 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -i enp0s8 -s 172.16.0.100/31 -p tcp --dport 9200 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -j NFLOG --nflog-prefix "INPUT CleanUp"
-A INPUT -j DROP
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j LIMITE
-A FORWARD -s 172.16.0.100/31 -p tcp -m conntrack --ctstate NEW -m multiport --dports 80,443 -j LIMITE
-A FORWARD -s 172.16.0.100/31 -p udp -m conntrack --ctstate NEW --dport 53 -j LIMITE
-A FORWARD -d 172.16.0.100/32 -p tcp -m conntrack --ctstate NEW -m multiport --dports 8080,2222 -j LIMITE
-A FORWARD -d 172.16.0.101/32 -p tcp -m conntrack --ctstate NEW -m multiport --dports 2525,5555,9100 -j LIMITE
-A FORWARD -j NFLOG --nflog-prefix "FORWARD CleanUp"
-A FORWARD -j DROP
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o lo -m conntrack --ctstate NEW -j ACCEPT
-A OUTPUT -o enp0s8 -d 172.16.0.100/31 -p tcp --dport 22 -m conntrack --ctstate NEW -j ACCEPT
-A OUTPUT -o enp0s8 -d 172.16.0.100/31 -p tcp --sport 8220 -m conntrack --ctstate NEW -j ACCEPT
-A OUTPUT -o enp0s8 -d 172.16.0.101/32 -p tcp --dport 5432 -m conntrack --ctstate NEW -j ACCEPT
-A OUTPUT -o enp0s3 -p tcp -m conntrack --ctstate NEW -m tcp --dport 443 -j ACCEPT
-A OUTPUT -o enp0s3 -p tcp -m conntrack --ctstate NEW -m tcp --dport 80 -j ACCEPT
-A OUTPUT -o enp0s3 -p udp -m conntrack --ctstate NEW -m udp --dport 53 -j ACCEPT
-A OUTPUT -j NFLOG --nflog-prefix "OUTPUT CleanUp"
-A OUTPUT -j DROP
-A LIMITE -m hashlimit --hashlimit-upto 40/sec --hashlimit-burst 20 --hashlimit-mode srcip --hashlimit-name conn_rate_limit -j ACCEPT
-A LIMITE -j NFLOG --nflog-prefix "Limite conexiones"
-A LIMITE -j DROP
COMMIT


*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -d 192.168.18.200/32 -p tcp -m multiport --dports 80 -j DNAT --to-destination 172.16.0.100:8080
-A PREROUTING -d 192.168.18.200/32 -p tcp --dport 22 -j DNAT --to-destination 172.16.0.100:2222
-A PREROUTING -d 192.168.18.200/32 -p tcp --dport 25 -j DNAT --to-destination 172.16.0.101:2525
-A PREROUTING -d 192.168.18.200/32 -p tcp -m multiport --dports 5555,9100 -j DNAT --to-destination 172.16.0.101
-A POSTROUTING -o enp0s3 -j SNAT --to-source 192.168.18.200
COMMIT
